LU-4883 lmv: disable sub-stripe access from .lustre/fid

1. Disable sub-stripe access from .lustre/fid.

2. A few fixes for fid2patch with striped directory.

3. Add sanity 162b to test such cases.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: Ic9372f456d452fbee4a3b05849026422264a00f6